@@ -15,9 +15,9 @@ import com.google.gdata.util.ServiceException;
 
 public class RescheduleSuggestion extends Suggestion {
 
-	private Pair<Calendar, Calendar> newDates;
+	private Pair<Long, Long> newDates;
 	private CalendarEventEntry event;
-	
+
 	public RescheduleSuggestion(BaseCalendarSlot slot) {
 		super(slot);
 	}
@@ -37,22 +37,22 @@ public class RescheduleSuggestion extends Suggestion {
 
 	public RescheduleSuggestion(IEvent e, Calendar newStart, Calendar newEnd){
 		super(e);
-		setNewDates(newStart, newEnd);
+		setNewDates(newStart.getTimeInMillis(), newEnd.getTimeInMillis());
 		event = e.getCalendarEvent();
 	}
-	
-	public void setNewDates(Calendar newStart, Calendar newEnd){
-		newDates = new Pair<Calendar, Calendar>(newStart, newEnd);
-	}
-		
- 	public String getType() {
- 		return "Reschedule";
- 	}
 
- 	protected void makePersistentInternal() {
+	public void setNewDates(long newStart, long newEnd){
+		newDates = new Pair<Long, Long>(newStart, newEnd);
+	}
+
+	public String getType() {
+		return "Reschedule";
+	}
+
+	protected void makePersistentInternal() {
 		event.setTitle(new PlainTextConstruct("Rescheduling!"));
-		event.getTimes().get(0).setStartTime(new DateTime(newDates.getFirst().getTimeInMillis()));
-		event.getTimes().get(0).setEndTime(new DateTime(newDates.getSecond().getTimeInMillis()));
+		event.getTimes().get(0).setStartTime(new DateTime(newDates.getFirst()));
+		event.getTimes().get(0).setEndTime(new DateTime(newDates.getSecond()));
 		URL editUrl;
 		try {
 			editUrl = new URL(event.getEditLink().getHref());
@@ -69,5 +69,4 @@ public class RescheduleSuggestion extends Suggestion {
 	public CalendarEventEntry getCalendarEvent() {
 		return null;
 	}
-
 }
